Issue #2876219: Dropdown not visible on mobile / scroll bars shown

--- a/bootstrap_languages.css
+++ b/bootstrap_languages.css
@@ -6,3 +6,15 @@
 #block-bootstrap-languages-language .lang-sm {
   top: 2px !important;
 }
+
+ #block-bootstrap-languages-language .dropdown-menu{
+  left: inherit;
+  right: 0;
+}
+
+div[aria-expanded="true"] #block-bootstrap-languages-language .btn-group.open{
+  position: static;
+}
+div[aria-expanded="true"] #block-bootstrap-languages-language .btn-group.open .dropdown-menu{
+  margin-right: 15px;
+}
